@@ -1,0 +1,11 @@
+{
+  "timestamp" : "2022-04-20T08:17:03Z",
+  "count" : 2,
+  "count_minmax" : [ 2, 2 ],
+  "count_prev_day_inc" : 2,
+  "count_prev_day_dec" : 0,
+  "uniques" : 2,
+  "uniques_minmax" : [ 2, 2 ],
+  "uniques_prev_day_inc" : 2,
+  "uniques_prev_day_dec" : 0
+}
