@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-04-20T01:03:36Z",
+  "timestamp" : "2022-04-20T08:17:03Z",
   "count_outdated" : 250,
   "uniques_outdated" : 118,
-  "count" : 260,
-  "uniques" : 126,
+  "count" : 262,
+  "uniques" : 128,
   "clones" : [
     {
       "timestamp": "2022-04-06T00:00:00Z",
@@ -25,6 +25,13 @@
       "count_minmax": [ 8, 8 ],
       "uniques": 6,
       "uniques_minmax": [ 6, 6 ]
+    },
+    {
+      "timestamp": "2022-04-20T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ]
     }
   ]
 }
