@@ -1,6 +1,6 @@
 {
-  "count": 10,
-  "uniques": 7,
+  "count": 12,
+  "uniques": 8,
   "clones": [
     {
       "timestamp": "2022-04-06T00:00:00Z",
@@ -16,6 +16,11 @@
       "timestamp": "2022-04-18T00:00:00Z",
       "count": 8,
       "uniques": 6
+    },
+    {
+      "timestamp": "2022-04-20T00:00:00Z",
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
