@@ -1,3 +1,9 @@
+2022-04-20T08:17:03Z:
+* notice: last 14d: all unq: 12 8
+* notice: prev accum: outdated-all outdated-unq / all unq: 250 118 / 260 126
+* notice: next accum: outdated-all outdated-unq / all unq: 250 118 / 262 128
+* notice: prev json diff // prev day diff: unq all: +2 +2 / -0 -0 // +2 +2 / -0 -0
+
 2022-04-20T01:03:36Z:
 * notice: last 14d: all unq: 10 7
 * notice: prev accum: outdated-all outdated-unq / all unq: 249 117 / 260 126
